--- a/app/src/main/res/layout/activity_item_locator.xml
+++ b/app/src/main/res/layout/activity_item_locator.xml
@@ -6,13 +6,16 @@
     android:layout_height="match_parent"
     tools:context="com.example.jhend.warehousesupplieslocator.Activities.ItemLocator">
 
-    <TextView
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:text="Search"
+        android:id="@+id/search_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+
 
 </android.support.constraint.ConstraintLayout>
