--- a/app/src/main/res/layout/activity_item_locator.xml
+++ b/app/src/main/res/layout/activity_item_locator.xml
@@ -7,14 +7,21 @@
     tools:context="com.example.jhend.warehousesupplieslocator.Activities.ItemLocator">
 
     <Button
+        android:id="@+id/search_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Search"
-        android:id="@+id/search_button"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
+    <com.example.jhend.warehousesupplieslocator.MapView
+        android:id="@+id/mapView"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+    />
 
 
 
